--- a/src/Web/DamaWeb/Pages/Category/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Category/Index.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = @Model.CategoryModel.CategoryName;
 }
 
-<h2>@Model.CategoryModel.CategoryName</h2>
+<p class="title">@Model.CategoryModel.CategoryName</p>
 
 @if (Model.CategoryModel.CatalogModel != null)
 {
@@ -39,7 +39,7 @@
     {
         <div class="news-heading text-center">
             <h2>Novidades</h2>
-            <img class="separator" src="~/images/coração-rosa.png" />
+            <img class="separator" src="~/images/barra-coracao.png" />
         </div>
 
         <div class="container">
