--- a/src/Web/DamaWeb/Pages/Customize/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Customize/Index.cshtml
@@ -19,7 +19,7 @@
     <div class="dama-customize pt-sm-5 pt-2">
         <div class="text-center">
             <h2>Personaliza Tu mesmo!</h2>
-            <img class="separator image-invert" src="~/images/coração-rosa.png" />
+            <img class="separator image-invert" src="~/images/barra-coracao.png" />
             <div class="mt-3">
                 <span class="badge badge-pill badge-light">1</span>
             </div>
