--- a/src/Web/DamaWeb/Pages/Tag/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Tag/Index.cshtml
@@ -8,7 +8,7 @@
 <h2>Resultados para: @Model.TagName</h2>
 
 <div class="news-heading text-center">
-    <img class="separator" src="~/images/coração-rosa.png" />
+    <img class="separator" src="~/images/barra-coracao.png" />
 </div>
 <section class="esh-catalog-filters">
     <div class="container">
