--- a/src/Web/DamaWeb/wwwroot/css/_variables.scss
+++ b/src/Web/DamaWeb/wwwroot/css/_variables.scss
@@ -63,3 +63,9 @@ $border-light: 1px;
 $image_path: '../../images/';
 $image-main_banner: '#{$image_path}main_banner.png';
 $image-arrow_down: '#{$image_path}arrow-down.png';
+
+//BootStrap
+$theme-colors: {
+    secondary: red
+}
+@import "~bootstrap/scss/bootstrap";
