--- a/src/Web/DamaWeb/Pages/Category/Type/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Category/Type/Index.cshtml
@@ -8,7 +8,7 @@
 
 <div class="news-heading text-center">
     <h2>Todos os Produtos</h2>
-    <img class="separator" src="~/images/coração-rosa.png" />
+    <img class="separator" src="~/images/barra-coracao.png" />
 </div>
 <section class="esh-catalog-filters">
     <div class="container">
