--- a/src/Web/DamaWeb/Pages/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Index.cshtml
@@ -44,7 +44,7 @@
 {
     <div class="news-heading text-center">
         <h2>Novidades</h2>
-        <img class="separator" src="~/images/coração-rosa.png" />
+        <img class="separator" src="~/images/barra-coracao.png" />
     </div>
 
     <div class="container">
@@ -64,7 +64,7 @@
 {
     <div class="news-heading text-center">
         <h2>Destaques</h2>
-        <img width="395" height="26" src="~/images/coração-rosa.png" />
+        <img width="395" height="26" src="~/images/barra-coracao.png" />
     </div>
 
     <div class="container">
