--- a/src/Web/DamaWeb/Pages/Product/_productDetail.cshtml
+++ b/src/Web/DamaWeb/Pages/Product/_productDetail.cshtml
@@ -6,25 +6,17 @@
         <div class="dama-product-price">
             <span>@Model.ProductPrice</span>
         </div>
-        @*<div class="my-auto pl-1 pr-1">&#8211;</div>
-            <div class="dama-product-price">
-                <span>15.00</span>
-            </div>*@
     </div>
     <div class="text-center mb-1 mt-md-3 mb-md-3">
-        <img width="180" src="~/images/coração-rosa.png" />
+        <img width="180" src="~/images/barra-coracao.png" />
     </div>
 
-    <p class="dama-product-description mb-md-4">@Html.Raw(Model.ProductDescription)</p>
-    <small>Tempo de entrega entre @Model.DeliveryTimeMin a @Model.DeliveryTimeMax @(DamaWeb.Extensions.EnumHelper<ApplicationCore.Entities.DeliveryTimeUnitType>.GetDisplayValue(Model.DeliveryTimeUnit))</small>
-
     @if (Model.ProductReferences.Any())
-    {        
+    {
         <div class="row dama-product-attr mb-2 mb-md-3">
             <label class="col-2 col-form-label">Tamanho</label>
             <div class="col-10">
-                <select id="referenceProducts" class="form-control" asp-items="Model.ProductReferences">
-                </select>
+                <select id="referenceProducts" class="form-control" asp-items="Model.ProductReferences"></select>
             </div>
         </div>
     }
@@ -43,25 +35,68 @@
         </div>
     }
 
-    <hr />
-    <div class="btn-group mt-md-4" role="group">
+    @if (Model.CanCustomize)
+    {
+        <div class="row align-items-center mb-4 mt-4">
+            <div class="col-12 col-md-7 dama-customize-question mb-2 mb-sm-0">Queres personalizar com um nome?</div>
+            <div class="col-12 col-md-5">
+                <a class="btn btn-dama-menta w-100" role="button" data-toggle="collapse" href="#addName">ADICIONAR NOME</a>
+            </div>
+            <small id="nameInputText" class="text-muted ml-3 dama-small-text"></small>
+            
+        </div>
+        <div id="addName" class="collapse mb-4">
+            <div class="ml-3 ml-md-5">
+                <div class="form-group mb-0">
+                    <label for="exampleInputEmail1">Nome ou Frase</label>
+                </div>
+                <div class="form-group row">
+                    <div class="col-7">
+                        <input asp-for="NameInput" class="form-control dama-product-input" placeholder="escreve aqui" />
+                        <span asp-validation-for="NameInput" class="text-danger"></span>
+
+                    </div>
+                    <div class="col-5 col-md-4">
+                        <a id="saveName" class="btn btn-primary rounded-0 w-100" role="button" data-toggle="collapse" href="#addName">GRAVAR</a>
+                    </div>
+                    <div class="col">
+                        <small class="text-muted dama-small-text">*Esta personalização tem um custo adicional de 2,90€</small>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <hr />
+        <div class="row mb-4 mb-md-3 align-items-center">
+            <div class="col-12 col-md-7 dama-customize-question  mb-2 mb-sm-0">Queres uma personalização total?</div>
+            <div class="col-12 col-md-5">
+                <a class="btn btn-dama-menta w-100" role="button" asp-page="/Customize/Index" asp-route-CategoryId="@Model.FirstCategoryId" asp-route-CatalogItemId="@Model.ProductId">PERSONALIZAR</a>
+            </div>
+        </div>
+    }
+
+    <div class="btn-group mt-md-4 w-100" role="group">
         <button id="btnSub" type="button" class="btn">-</button>
         <input asp-for="ProductQuantity" class="form-control col-2 text-center">
         <button id="btnAdd" type="button" class="btn">+</button>
-        <input class="dama-product-add ml-2" type="submit" value="[ ADICIONAR ]" />
+        <input class="dama-product-add ml-2 w-100" type="submit" value="ADICIONAR" />
     </div>
-    @if (Model.CanCustomize)
-    {
-        <div><a asp-page="/Customize/Index" asp-route-CategoryId="@Model.FirstCategoryId" asp-route-CatalogItemId="@Model.ProductId">Quer personalizar a carteira? clique aqui!</a> </div>
-    }
 
+    <small class="text-muted dama-small-text">Tempo de entrega entre @Model.DeliveryTimeMin a @Model.DeliveryTimeMax @(DamaWeb.Extensions.EnumHelper<ApplicationCore.Entities.DeliveryTimeUnitType>.GetDisplayValue(Model.DeliveryTimeUnit)) para produtos em stock.</small>
+
+    <div class="text-center mb-1 mt-md-3 mb-md-3">
+        <img width="180" src="~/images/barra-coracao.png" />
+    </div>
+
+    <p class="dama-product-description mb-md-4">@Html.Raw(Model.ProductDescription)</p>
+
+    <hr />
     <div class="row dama-product-attr mt-2 mt-md-4">
         <label asp-for="ProductSKU" class="col-3 col-form-label"></label>
         <div class="col-9">
             <span>@Model.ProductSKU</span>
         </div>
     </div>
-
     <div class="row dama-product-attr mt-md-2">
         <label class="col-3 col-form-label">Categorias:</label>
         <div class="col-9">
