--- a/src/Web/DamaWeb/Pages/Basket/Result.cshtml
+++ b/src/Web/DamaWeb/Pages/Basket/Result.cshtml
@@ -13,7 +13,7 @@
         <p>Obrigado por escolher a <strong>Dama no Jornal&reg;!</strong></p>
     </div>
     <div class="col-sm-6">
-        <img src="http://via.placeholder.com/300x500" alt="Dama no Jornal" />
+        <img src="~/images/obrigada.png" class="img-fluid" alt="Dama no Jornal" />
     </div>
 </div>
 
