--- a/src/Web/DamaWeb/Pages/Customize/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Customize/Index.cshtml
@@ -13,19 +13,17 @@
         }
     </style>
 }
-<img src="http://via.placeholder.com/1900x600" class="img-fluid" />
+<img src="~/images/banner-personalizar-2.jpg" class="img-fluid" />
 
-<form method="post" enctype="multipart/form-data">
+<form method="post">
     <div class="dama-customize pt-sm-5 pt-2">
         <div class="text-center">
-            <h2>Personaliza Tu mesmo!</h2>
-            <img class="separator image-invert" src="~/images/barra-coracao.png" />
-            <div class="mt-3">
-                <span class="badge badge-pill badge-light">1</span>
+            <h2>Vamos Começar?</h2>
+            <div class="mt-1">
+                <h3><span class="badge badge-pill badge-light">1</span></h3>
             </div>
             <h4 class="mt-2">
-                CATEGORIA <br />
-                <span class="dama-customize-small">Escolhe uma opção</span>
+                Em que categoria se encontra o produto que queres personalizar?                
             </h4>
         </div>
         <a name="produtos"></a>
@@ -34,8 +32,8 @@
                 <div class="row p-sm-3 dama-customize-cards ">
                     @foreach (var item in Model.CustomizeModel.Categories)
                     {
-                        <div class="col-sm-3 pt-3 category-block" cat-id="@item.Item1">
-                            <div class="card card-block justify-content-center align-items-center">
+                        <div class="col-sm-4 pt-3 category-block" cat-id="@item.Item1">
+                            <div class="card card-block justify-content-center align-items-center @(item.Item1 == Model.CategoryId ? "dama-customize-menta" : "")">
                                 <h5 class="@(item.Item1 == Model.CategoryId ? "font-weight-bold" : "")">@item.Item2</h5>
                             </div>
                         </div>
@@ -44,157 +42,32 @@
             </div>
         </div>
         <div class="text-center">
-            <div class="mt-3">
-                <span class="badge badge-pill badge-light">2</span>
-            </div>
             <h4 class="mt-2">
-                Produto <br />
-                <span class="dama-customize-small">Escolhe uma opção</span>
+                Qual é o produto?
             </h4>
         </div>
         <div class="row">
             <div class="offset-1 col-10">
-                <div class="row p-sm-3 dama-customize-cards slider-for">
-                    @for (int i = 0; i < Model.CustomizeModel.CatalogItems.Count; i++)
+                <div class="row p-sm-3 dama-customize-cards product-types justify-content-center">
+                    @for (int i = 0; i < Model.CustomizeModel.ProductTypes.Count; i++)
                     {
-                        <div class="col pt-3 product-block" catalog-id="@Model.CustomizeModel.CatalogItems[i].CatalogItemId">
+                        <div class="col-sm-3 pt-3 product-block" catalog-type-id="@Model.CustomizeModel.ProductTypes[i].Id">
                             <div class="card card-block justify-content-center align-items-center" style="min-width:9rem">
-                                <img class="card-img-top" src="@Model.CustomizeModel.CatalogItems[i].PictureUri" alt="@Model.CustomizeModel.CatalogItems[i].CatalogItemName">
-                                <p class="card-text small">@Model.CustomizeModel.CatalogItems[i].CatalogItemName</p>
+                                <img class="card-img-top" src="@Model.CustomizeModel.ProductTypes[i].PictureUri" alt="@Model.CustomizeModel.ProductTypes[i].Name">
                             </div>
                         </div>
                     }
                 </div>
             </div>
         </div>
-        <div class="text-center">
-            <div class="mt-3">
-                <span class="badge badge-pill badge-light">3</span>
-            </div>
-            <h4 class="mt-2">
-                PERSONALIZAR <br />
-                <span class="dama-customize-small">Preenche os campos em baixo e escolhe duas cores!</span>
-            </h4>
-        </div>
-        <div class="row ml-1 mr-1">
-            <div class="offset-sm-1 col-sm-7 col-12 dama-customize-gray p-3">
-                <strong>Descreve a ilustração...</strong><br />
-                <textarea asp-for="CustomizeModel.Description" rows="5" class="w-100 dama-customize-textarea"></textarea>
-                <span asp-validation-for="CustomizeModel.Description" class="text-danger"></span>
-            </div>
-            <div class="col-sm-3 col-12 pt-sm-5 pt-2">
-                <strong>Exemplo:</strong>
-                <p class="dama-customize-small2">
-                    "A minha amiga adora cozinhar, tem cabelo curto e não dispensa a companhia do seu gato cinzento.<br />
-                    Adora cor de rosa e castanho."
-                </p>
+        <div class="row go-section sr-only">
+            <div class="offset-sm-9 col-sm-2 offset-3 col-6">
+                <button type="submit" class="btn btn-dama-menta mt-sm-0 mr-sm-3 mt-3">Próximo passo &rarr;</button>
             </div>
         </div>
-
-        <div class="custom-file mt-sm-4 mt-2 offset-sm-5 col-sm-3 offset-1 col-10">
-            <input type="file" asp-for="CustomizeModel.UploadFile" class="custom-file-input" id="validatedCustomFile" />
-            <label class="custom-file-label" for="validatedCustomFile">Anexar um ficheiro</label>
-        </div>
-        <div class="row ml-1 mr-1 mt-sm-4 mt-2">
-            <div class="offset-sm-1 col-sm-7 col-12 dama-customize-gray p-3">
-                <strong>Queres adicionar uma frase ou nome?</strong><br />
-                <textarea asp-for="CustomizeModel.Text" rows="2" class="w-100 dama-customize-textarea"></textarea>
-            </div>
-        </div>
-        <div class="row ml-1 mr-1 mt-sm-4 mt-2 text-center">
-            <div class="offset-sm-1 col-sm-7 col-12 p-0">
-                <strong>Escolha uma ou duas cores</strong>
-                <div class="row p-1 m-0 dama-customize-colors">
-                    <div class="card" style="width: 5rem;background-color:#000000">
-                        <div class="card-body">
-                        </div>
-                    </div>
-                    <div class="card" style="width: 5rem;background-color:#808080">
-                        <div class="card-body">
-                        </div>
-                    </div>
-                    <div class="card" style="width: 5rem;background-color:#ffffff">
-                        <div class="card-body">
-                        </div>
-                    </div>
-                    <div class="card" style="width: 5rem;background-color:#ff6a00">
-                        <div class="card-body">
-                        </div>
-                    </div>
-                    <div class="card" style="width: 5rem;background-color:#ffd800">
-                        <div class="card-body">
-                        </div>
-                    </div>
-                    <div class="card" style="width: 5rem;background-color:#b6ff00">
-                        <div class="card-body">
-                        </div>
-                    </div>
-                    <div class="card" style="width: 5rem;background-color:#0026ff">
-                        <div class="card-body">
-                        </div>
-                    </div>
-                    <div class="w-100 d-none d-sm-block"></div>
-                    <div class="card" style="width: 5rem;background-color:#b200ff">
-                        <div class="card-body">
-                        </div>
-                    </div>
-                    <div class="card" style="width: 5rem;background-color:#ff00dc">
-                        <div class="card-body">
-                        </div>
-                    </div>
-                    <div class="card" style="width: 5rem;background-color:#15e9ef">
-                        <div class="card-body">
-                        </div>
-                    </div>
-                    <div class="card" style="width: 5rem;background-color:#fbcd17">
-                        <div class="card-body">
-                        </div>
-                    </div>
-                    <div class="card" style="width: 5rem;background-color:#0befe1">
-                        <div class="card-body">
-                        </div>
-                    </div>
-                    <div class="card" style="width: 5rem;background-color:#c2ed10">
-                        <div class="card-body">
-                        </div>
-                    </div>
-                    <div class="card" style="width: 5rem;background-color:#ee1988">
-                        <div class="card-body">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row mt-3 pb-5">
-            <div class="offset-1 col-sm-4 col-10">
-                <div class="form-group required">
-                    <label asp-for="CustomizeModel.BuyerName" class="control-label form-label"></label>
-                    <input asp-for="CustomizeModel.BuyerName" class="form-control form-input form-input-center" />
-                    <span asp-validation-for="CustomizeModel.BuyerName" class="text-danger"></span>
-                </div>
-                <div class="form-group required">
-                    <label asp-for="CustomizeModel.BuyerEmail" class="control-label form-label"></label>
-                    <input asp-for="CustomizeModel.BuyerEmail" class="form-control form-input form-input-center" />
-                    <span asp-validation-for="CustomizeModel.BuyerEmail" class="text-danger"></span>
-                </div>
-                <div class="form-group required">
-                    <label asp-for="CustomizeModel.BuyerPhone" class="control-label form-label"></label>
-                    <input asp-for="CustomizeModel.BuyerPhone" class="form-control form-input form-input-center" />
-                    <span asp-validation-for="CustomizeModel.BuyerPhone" class="text-danger"></span>
-                </div>
-                <div class="text-center">
-                    <button type="submit" class="esh-catalog-button btn btn-default btn-brand mt-0">&nbsp;SUBMETER&nbsp;</button>
-                </div>
-            </div>
-        </div>
-        @*<div class="row mt-3 pb-5">
-                <div class="offset-sm-5 col-sm-3 col-12 text-sm-right text-center">
-                    <button type="submit" class="esh-catalog-button btn btn-default btn-brand btn-brand-big mt-0">&nbsp;SUBMETER&nbsp;</button>
-                </div>
-            </div>*@
+        
     </div>
-    <input type="hidden" asp-for="CustomizeModel.ProductSelected" />
-    <input type="hidden" asp-for="CustomizeModel.Colors" />
+    <input type="hidden" asp-for="CustomizeModel.CatalogItemId" />
 </form>
 
 @section Scripts {
@@ -202,19 +75,19 @@
     <script>
         var colors = [];
         $(document).ready(function () {
-            $('.slider-for').slick({
-                infinite: true,
-                slidesToShow: 4,
-                slidesToScroll: 1,
-                responsive: [
-                    {
-                        breakpoint: 576,
-                        settings: {
-                            slidesToShow: 1
-                        }
-                    }]
+            //$('.slider-for').slick({
+            //    infinite: true,
+            //    slidesToShow: 4,
+            //    slidesToScroll: 1,
+            //    responsive: [
+            //        {
+            //            breakpoint: 576,
+            //            settings: {
+            //                slidesToShow: 1
+            //            }
+            //        }]
 
-            });
+            //});
 
             $('.category-block').click(function () {
                 var url = '@(Url.Page("/Customize/Index", new { CategoryId = 0 }))';
@@ -228,47 +101,38 @@
                 //$(this).siblings().find('img').css('opacity', 0.5);
                 //$(this).siblings().find('.card-text').css('font-weight', '100');
                 selectProduct($(this));
-                $('#CustomizeModel_ProductSelected').val($(this).attr('catalog-id'));
+                $('#CustomizeModel_CatalogItemId').val($(this).attr('catalog-type-id'));
+                $('.go-section').removeClass("sr-only");
             });
 
-            $('.dama-customize-colors .card').click(function () {
-                $(this).toggleClass('dama-customize-color-selected');
-                var color = $(this).css('background-color').replace(/,/g, ';');
-                if ($(this).hasClass('dama-customize-color-selected'))
-                    colors.push(color);
-                else {
-                    var index = colors.indexOf(color);
-                    colors.splice(index, 1);
-                }
-                console.log(colors);
-                $('#CustomizeModel_Colors').val(colors);
-            });
+            //$('.dama-customize-colors .card').click(function () {
+            //    $(this).toggleClass('dama-customize-color-selected');
+            //    var color = $(this).css('background-color').replace(/,/g, ';');
+            //    if ($(this).hasClass('dama-customize-color-selected'))
+            //        colors.push(color);
+            //    else {
+            //        var index = colors.indexOf(color);
+            //        colors.splice(index, 1);
+            //    }
+            //    console.log(colors);
+            //    $('#CustomizeModel_Colors').val(colors);
+            //});
 
-            $('#validatedCustomFile').on('change', function () {
-                changeLabelText();
-            });
+            //$('#validatedCustomFile').on('change', function () {
+            //    changeLabelText();
+            //});
 
             function selectProduct(elem) {
-                elem.find('img').css('opacity', 1);
-                elem.find('.card-text').css('font-weight', 'bold');
-                elem.siblings().find('img').css('opacity', 0.5);
-                elem.siblings().find('.card-text').css('font-weight', '100');
+                elem.find('img').css('border', "5px solid #FC629D");
+                elem.siblings().find('img').css('border', "");
             }
 
-            function changeLabelText() {
-                var profilePicValue = document.getElementById('validatedCustomFile').value; /* gets the filepath and filename from the input */
-                var fileNameStart = profilePicValue.lastIndexOf('\\'); /* finds the end of the filepath */
-                profilePicValue = profilePicValue.substr(fileNameStart + 1); /* isolates the filename */
-                var profilePicLabelText = document.querySelector('label[for="validatedCustomFile"]'); /* finds the label text */
-                if (profilePicValue !== '') {
-                    profilePicLabelText.textContent = profilePicValue.substring(0,15); /* changes the label text */
-                }
-            }
+            
 
-            @if(Model.CustomizeModel.ProductSelected.HasValue)
+            @if(Model.CustomizeModel.CatalogItemId.HasValue)
             {
                 <text>
-            var productElem = $('.slider-for').find("[catalog-id='@Model.CustomizeModel.ProductSelected.Value']");
+            var productElem = $('.product-types').find("[catalog-type-id='@Model.CustomizeModel.CatalogItemId.Value']");
             selectProduct(productElem);
                 </text>
             }
