--- a/src/Web/DamaWeb/Pages/Customize/Result.cshtml
+++ b/src/Web/DamaWeb/Pages/Customize/Result.cshtml
@@ -3,17 +3,15 @@
 @{
     ViewData["Title"] = "Resultado";
 }
-<h2>Obrigada!</h2>
 
-<div class="row">
-    <div class="col-sm-6">
-        <p>O seu pedido foi criado com <strong>Sucesso!</strong></p>
-        <p>Vamos analisar o seu pedido e logo entraremos em contato.</p>
-        <br />
-        <p>Obrigado por escolher a <strong>Dama no Jornal&reg;!</strong></p>
+<div class="row align-items-center justify-content-center">
+    <div class="dama-customize offset-1 col-sm-5 text-center">
+        <h3 class="mb-5">Obrigada!</h3>
+        <p class="mt5">Obrigada por nos enviares o teu pedido!<br />
+        Serás contactado em breve para darmos seguimento à personalização.</p>
     </div>
-    <div class="col-sm-6">
-        <img src="http://via.placeholder.com/300x500" alt="Dama no Jornal" />
+    <div class="col-sm-5">
+        <img src="~/images/obrigada.png" class="img-fluid" alt="Dama no Jornal" />
     </div>
 </div>
 
