--- a/src/Web/DamaWeb/Pages/Customize/Step3.cshtml
+++ b/src/Web/DamaWeb/Pages/Customize/Step3.cshtml
@@ -17,7 +17,7 @@
     <form method="post" enctype="multipart/form-data">
         <div class="dama-customize pt-sm-5 pt-2">
             <div class="row mb-3">
-                <div class="offset-3 col-6 text-center">
+                <div class="offset-sm-3 col-sm-6 col-12 text-center">
                     <h2>E para terminar...</h2>
                     <div class="mt-1">
                         <h3><span class="badge badge-pill badge-light">3</span></h3>
@@ -28,16 +28,16 @@
                     <small>(podes também anexar uma fotografia ou imagem para fazermos uma personalização mais precisa.)</small>
                 </div>
             </div>
-            <div class="row mb-3">
-                <div class="offset-4 col-4">
+            <div class="row mb-3 mx-2 mx-sm-0">
+                <div class="offset-sm-4 col-sm-4 col-12">
                     <div class="custom-file mt-sm-4 mt-2">
                         <input type="file" asp-for="CustomizeModel.UploadFile" class="custom-file-input" id="validatedCustomFile" />
                         <label class="custom-file-label" for="validatedCustomFile">Anexar um ficheiro</label>
                     </div>
                 </div>
             </div>
-            <div class="row mt-3 pb-5">
-                <div class="offset-sm-3 col-sm-6 col-10">
+            <div class="row mt-3 pb-5 mx-2 mx-sm-0">
+                <div class="offset-sm-3 col-sm-6 col-12">
                     <div class="form-group required">
                         <label asp-for="CustomizeModel.BuyerName" class="control-label form-label"></label>
                         <input asp-for="CustomizeModel.BuyerName" class="form-control form-input-center form-input-gray" />
@@ -59,12 +59,12 @@
                 </div>
             </div>
             <div class="row go-section">
-                <div class="offset-sm-3 col-sm-6">
+                <div class="offset-sm-3 col-sm-6 col-12">
                     <div class="row pr-0 m-0">
-                        <div class="col-2">
-                            <a asp-page="./Step2" asp-route-id="@Model.CustomizeModel.CatalogItemId" class="btn btn-dama-menta mt-0 mr-3" role="button">&larr; Voltar</a>
+                        <div class="col-sm-2 col-3">
+                            <a asp-page="./Step2" asp-route-id="@Model.CustomizeModel.CatalogItemId" class="btn btn-dama-menta mt-0 mr-3 text-white" role="button">&larr; Voltar</a>
                         </div>
-                        <div class="offset-7 col-3">
+                        <div class="offset-sm-7 col-sm-3 offset-3 col-6">
                             <button type="submit" class="btn btn-dama-pink mt-0 mr-3 w-100" asp-page-handler="Submit">ENVIAR</button>
                         </div>
                     </div>
