--- a/src/Web/DamaWeb/Pages/Customize/Step2.cshtml
+++ b/src/Web/DamaWeb/Pages/Customize/Step2.cshtml
@@ -27,7 +27,7 @@
                 </h4>               
             </div>
         </div>
-        <div class="row mb-3 ml-2 mr-2 ml-sm-0 mr-sm-0">
+        <div class="row mb-3 mx-2 mx-sm-0">
             <div class="offset-sm-2 col-sm-8 col-12 p-3 dama-customize-pink text-white dama">
                 <p><strong>Exemplo</strong></p>
                 <p class="dama-customize-small2">
