--- a/src/Web/DamaWeb/Pages/Components/Menu/Default.cshtml
+++ b/src/Web/DamaWeb/Pages/Components/Menu/Default.cshtml
@@ -1,9 +1,9 @@
 ﻿@using DamaWeb.ViewModels
-@model MenuComponentViewModel
+@model IEnumerable<MenuItemComponentViewModel>
 
 
 <ul class="navbar-nav text-nowrap">
-    @foreach (var item in Model.Left)
+    @foreach (var item in Model)
     {
         if (item.Childs.Count > 0)
         {
@@ -46,12 +46,9 @@
 
     }
 </ul>
-<a href="https://www.damanojornal.com" class="navbar-brand brand-image">
-    <img src="~/images/brand.png" width="137px" alt="Dama no Jornal" />
-    <h1>A Loja</h1>
-</a>
 
-<ul class="navbar-nav text-nowrap">
+
+@*<ul class="navbar-nav text-nowrap">
 
     @foreach (var item in Model.Right)
     {
@@ -67,20 +64,7 @@
                         <a class="dropdown-item" asp-page="/Category/Index" asp-route-id="@child.NameUri">
                             <span class="dropdown-item-text">@child.Name</span>
                         </a>
-                        @*@if (!string.IsNullOrEmpty(child.TypeUri))
-                            {
-
-                                <a class="dropdown-item" asp-page="/Category/Type/Index" asp-route-cat="@child.NameUri" asp-route-type="@child.TypeUri">
-                                    <span class="dropdown-item-text">@child.Name</span>
-                                </a>
-                            }
-                            else
-                            {
-                                <a class="dropdown-item" asp-page="/Category/Index" asp-route-id="@child.NameUri">
-                                    <span class="dropdown-item-text">@child.Name</span>
-                                </a>
-
-                            }*@
+                       
                     }
                 </div>
             </li>
@@ -92,4 +76,4 @@
             </li>
         }
     }
-</ul>
+</ul>*@
