--- a/src/Web/DamaWeb/wwwroot/css/app.component.css
+++ b/src/Web/DamaWeb/wwwroot/css/app.component.css
@@ -1,5 +1,5 @@
 ﻿.esh-app-footer {
-    background-color: #EF7C8D;
+    background-color: #FC629D;
     border-top: 1px solid #EEEEEE;
     margin-top: 2.5rem;
     padding-bottom: 2.5rem;
