--- a/src/Web/DamaWeb/Pages/Category/Type/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Category/Type/Index.cshtml
@@ -3,14 +3,13 @@
 @{
     ViewData["Title"] = "Index";
 }
-
-<h2>@Model.CatalogTypeName</h2>
+<p class="title">@Model.CatalogTypeName</p>
 
 <div class="news-heading text-center">
     <h2>Todos os Produtos</h2>
     <img class="separator" src="~/images/barra-coracao.png" />
 </div>
-<section class="esh-catalog-filters">
+@*<section class="esh-catalog-filters">
     <div class="container">
         <form method="get">
             <label class="esh-catalog-label" data-title="ilustração">
@@ -19,7 +18,7 @@
             <input class="esh-catalog-send pt-sm-1" type="image" src="~/images/arrow-right.svg" />
         </form>
     </div>
-</section>
+</section>*@
 <div class="container">
     <div class="esh-catalog-items row">
         @foreach (var catalogItem in Model.CatalogModel.CatalogItems)
@@ -31,7 +30,7 @@
         @if (Model.CatalogModel.CatalogItems.Count() == 0)
         {
             <div class="text-center">
-                <p>Lamentamos, mas não foram encontrados resultados!</p>
+<p>Lamentamos, mas não foram encontrados resultados!</p>
             </div>
         }
     </div>
