--- a/src/Web/DamaWeb/Pages/Shared/_Layout.cshtml
+++ b/src/Web/DamaWeb/Pages/Shared/_Layout.cshtml
@@ -6,25 +6,28 @@
     <title>@ViewData["Title"] - Loja</title>
 
     <environment names="Development">
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+        <link href="~/lib/slick/slick.css" rel="stylesheet" />
+        <link href="~/lib/slick/slick-theme.css" rel="stylesheet" />        
+        <link href="~/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />
         <link rel="stylesheet" href="~/css/app.css" />
-        <link href="~/lib/slick-1.8.0/slick/slick-theme.css" rel="stylesheet" />
+        <link rel="stylesheet" href="~/css/app.component.css" />
+        <link rel="stylesheet" href="~/css/basket/basket.component.css" />
+        <link rel="stylesheet" href="~/css/catalog/pager.css" />
+        <link rel="stylesheet" href="~/css/catalog/catalog.component.css" />
+        <link rel="stylesheet" href="~/css/basket/basket-status/basket-status.component.css" />
+        <link rel="stylesheet" href="~/css/orders/orders.component.css" />
+        @*<link href="~/lib/slick-1.8.0/slick/slick-theme.css" rel="stylesheet" />*@
     </environment>
-    <environment names="Staging,Production">
-        @*<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous"
-            asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-            asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />*@
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"
-              asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <environment names="Staging,Production">        
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous"
+              asp-fallback-href="~/lib/bootstrap/css/bootstrap.min.css" />
+
+        @*<link href="~/lib/slick/slick.min.css" rel="stylesheet" />
+        <link href="~/lib/slick/slick-theme.min.css" rel="stylesheet" />*@
         <link rel="stylesheet" href="~/css/app.min.css" asp-append-version="true" />
     </environment>
-    <link rel="stylesheet" href="~/css/app.component.css" />
-    <link rel="stylesheet" href="~/css/basket/basket.component.css" />
-    <link rel="stylesheet" href="~/css/catalog/pager.css" />
-    <link rel="stylesheet" href="~/css/catalog/catalog.component.css" />
-    <link rel="stylesheet" href="~/css/basket/basket-status/basket-status.component.css" />
-    <link rel="stylesheet" href="~/css/orders/orders.component.css" />
-    <link rel="stylesheet" href="~/lib/slick-1.8.0/slick/slick.css" />
+    
+    @*<link rel="stylesheet" href="~/lib/slick-1.8.0/slick/slick.css" />*@
     @RenderSection("styles", required: false)
 </head>
 <body>
@@ -144,10 +147,10 @@
     </footer>
 
     <environment names="Development">
-        <script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+        <script src="~/lib/jquery/dist/jquery.js"></script>        
+        <script src="~/lib/bootstrap/js/bootstrap.js"></script>
         <script src="~/lib/fontawesome-free-5.0.4/js/fontawesome-all.js"></script>
-        <script src="~/lib/slick-1.8.0/slick/slick.js"></script>
+        <script src="~/lib/slick/slick.js"></script>        
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
     <environment names="Staging,Production">
@@ -157,13 +160,12 @@
                 crossorigin="anonymous"
                 integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT">
         </script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"
-                asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"
+                asp-fallback-src="~/lib/bootstrap/js/bootstrap.min.js"></script>
 
         <script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"
                 asp-fallback-src="~/lib/fontawesome-free-5.0.4/js/fontawesome-all.js">
         </script>
-        <script src="~/lib/slick-1.8.0/slick/slick.min.js"></script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
     </environment>
 
