--- a/src/Web/DamaWeb/Pages/Tag/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Tag/Index.cshtml
@@ -10,7 +10,7 @@
 <div class="news-heading text-center">
     <img class="separator" src="~/images/barra-coracao.png" />
 </div>
-<section class="esh-catalog-filters">
+@*<section class="esh-catalog-filters">
     <div class="container">
         <form method="get">
             <input type="hidden" name="tagName" value="@Model.TagName" />
@@ -24,7 +24,7 @@
             <input class="esh-catalog-send pt-1" type="image" src="~/images/arrow-right.svg" />
         </form>
     </div>
-</section>
+</section>*@
 <div class="container">
     <div class="esh-catalog-items row">
         @foreach (var catalogItem in Model.CatalogModel.CatalogItems)
