--- a/src/Web/DamaWeb/Pages/Product/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Product/Index.cshtml
@@ -22,7 +22,7 @@
                 <div class="slider-for">
                     @foreach (var item in Model.ProductModel.ProductImagesUri)
                     {
-                        <div><img src="@item" alt="Imagem do Produto" /></div>
+                        <div><img src="@item" class="img-fluid" alt="Imagem do Produto" /></div>
                     }
                 </div>
             </div>
