--- a/src/Web/DamaWeb/Pages/Shared/_Layout.cshtml
+++ b/src/Web/DamaWeb/Pages/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
         <input id="search" name="q" class="bg-transparent border-left-0 border-right-0 border-top-0 border-light ml-5" autocomplete="off" type="search" placeholder="Procurar" aria-label="Search">
     </form>
     <div class="customize-image">
-        <img src="~/images/personalizar.png" width="250" />
+        <a asp-page="/Customize/Index"><img src="~/images/personalizar.png" width="250" /></a>
         <div class="row justify-content-center">
             <div class="social-links"><a class="nav-link" href=""><i class="fab fa-facebook-f"></i></a></div>
             <div class="social-links"><a class="nav-link" href=""><i class="fab fa-instagram"></i></a></div>
