--- a/src/Web/DamaWeb/Pages/Product/_productDetail.cshtml
+++ b/src/Web/DamaWeb/Pages/Product/_productDetail.cshtml
@@ -70,7 +70,7 @@
         <div class="row mb-4 mb-md-3 align-items-center">
             <div class="col-12 col-md-7 dama-customize-question  mb-2 mb-sm-0">Queres uma personalização total?</div>
             <div class="col-12 col-md-5">
-                <a class="btn btn-dama-menta w-100" role="button" asp-page="/Customize/Index">PERSONALIZAR</a>
+                <a class="btn btn-dama-menta w-100 text-white" role="button" asp-page="/Customize/Index">PERSONALIZAR</a>
             </div>
         </div>
     }
