--- a/src/Web/DamaWeb/wwwroot/css/app.css
+++ b/src/Web/DamaWeb/wwwroot/css/app.css
@@ -439,7 +439,7 @@ hr {
         display: none;
     }
     .slider-for img {
-        height: 250px;
+        height: auto;
         width: auto;        
     }
     .dama-product-description {       
